tests/snapshot/error/regexp/source_location_non_unicode.js
// Non-unicode mode requires translating between UTF-8 and UTF-16
/ğŸ˜‚{2,1}/;